# miru-tracer

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  RunPod_README.md  app.py  constraints.txt  entrypoint.sh  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docker/: healthcheck.sh  sshd-miru.conf
docs/: lens-tutorial.md
src/: app.py
src/core/: logging_config.py  models.py  session_manager.py  tracer.py
src/miru_tracer/: __init__.py  __main__.py  app.py  config.py
src/miru_tracer/core/: interventions.py  lens.py  lens_fit.py  lens_io.py  model_manager.py  model_runtime.py  models.py  sampling.py  schema.py  session_manager.py  tokenizer_utils.py  tracer.py
src/miru_tracer/core/_jlens/: VENDORED.md  __init__.py  fit_metadata.py  fitting.py  lens.py
src/miru_tracer/ui/: analysis.py  helpers.py  interactive_mode.py  lens_common.py  lens_tab.py  lens_views.py  logging_mode.py  model_loader.py  theme.py  token_lookup.py  tokenize_text.py
src/miru_tracer/visualization/: plots.py
src/ui/: analysis.py  interactive_mode.py  logging_mode.py  model_loader.py  token_lookup.py  tokenize_text.py
src/visualization/: plots.py
tests/: conftest.py
tests/data/: legacy_log_v1.json
tests/docker/: smoke.sh
tests/integration/: test_app_smoke.py  test_lens_flow.py  test_qwen3_generation.py
tests/unit/: test_arch_matrix.py  test_config.py  test_interventions.py  test_jlens_vendor.py  test_lens.py  test_lens_comparison_renderers.py  test_lens_fit.py  test_lens_io.py  test_lens_ui.py  test_model_loader_ui.py  test_model_manager.py  test_model_runtime.py  test_plots.py  test_sampling.py  test_schema.py  test_session_manager.py  test_token_lookup_ui.py  test_tokenize_text_ui.py  test_tokenizer_utils.py  test_tracer_cache.py  test_tracer_eos.py  test_tracer_reset.py  test_tracer_step.py  test_ui_helpers.py
