[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "miru-tracer"
version = "0.1.0"
description = "Interactive analysis of LLM text generation, token by token"
readme = "README.md"
license = "Unlicense"
requires-python = ">=3.11"
dependencies = [
    "torch~=2.12",
    "transformers~=5.13",
    "accelerate~=1.14",
    "gradio~=6.20",
    "plotly~=6.8",
    "numpy~=2.5",
    "pandas~=2.3",
    "python-dotenv~=1.2",
    "sentencepiece~=0.2",
    "protobuf~=6.33",
]

[project.optional-dependencies]
gpu = [
    "bitsandbytes",
    "triton",
]
lens = [
    "datasets",
]
dev = [
    "pytest~=8.0",
    "pytest-timeout~=2.3",
    "ruff",
]

[project.scripts]
miru-tracer = "miru_tracer.app:main"
miru-tracer-fit-lens = "miru_tracer.core.lens_fit:main"

[project.urls]
Homepage = "https://github.com/returnmoe/miru-tracer"

[tool.hatch.build.targets.wheel]
packages = ["src/miru_tracer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that download and run Qwen3-0.6B (opt in with -m integration)",
]
addopts = "-m 'not integration'"
timeout = 600

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]
